# spark-tui

./: .gitignore  AOS_DESIGN.md  CLAUDE.md  CODEBASE-AUDIT.md  Cargo.toml  DESIGN-EVENT-BRIDGE.md  GEMINI.md  MEMORY-LEAK-INVESTIGATION.md  README.md  REWRITE-EXHAUSTIVE-SPEC.md  REWRITE-MASTER-PLAN.md  SESSION-HANDOFF.md  SHARED-BUFFER-SPEC.md  package.json  tsconfig.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  reactive-shared-memory-plan.md
conductor/: product-guidelines.md  product.md  tech-stack.md
docs/: ARCHITECTURE.md  AUTO-SCROLL-RULES.md  COMPONENTS.md  FEATURE-GAP.md  HIERARCHY-LINKED-LIST.md  IMPLEMENTATION-PLAN.md  MIGRATION-AOS-PIPELINE.md  README.md  RENDERING.md  RUST-REWRITE-PLAN.md  SESSION-HANDOFF.md  SHARED-BUFFER-SPEC.md  SPARK-TUI-ARCHITECTURE.md  SYSTEMS.md  bun-workers.md  getting-started.md
examples/: animation-stress.ts  api-showcase.ts  basic.rs  bench-1024.ts  bench-aos-vs-pure.ts  bench-aos.ts  bench-comprehensive.ts  bench-e2e.ts  bench-ffi-vs-sab.ts  bench-ffi-wake.ts  bench-ffi.ts  bench-headless.ts  bench-pipeline.ts  bench-real.ts  (+74 more)
rust/: Cargo.toml
rust/src/: bench_layout.rs  lib.rs  lib.rs.bkp  shared_buffer.rs  shared_buffer_aos.rs  shared_buffer_aos.rs.bkp  types.rs
rust/src/arrays/: interaction.rs  text.rs  visual.rs
rust/src/framebuffer/: inheritance.rs  mod.rs  render_tree.rs  render_tree.rs.bkp
rust/src/input/: cursor.rs  events.rs  focus.rs  keyboard.rs  mod.rs  mouse.rs  reader.rs  scroll.rs  text_edit.rs
rust/src/layout/: layout_tree.rs  layout_tree_aos.rs  mod.rs  types.rs
rust/src/layout/text_measure/: truncate.rs  width.rs  wrap.rs
rust/src/pipeline/: mod.rs  setup.rs  setup.rs.bkp  terminal.rs  wake.rs
rust/src/renderer/: ansi.rs  buffer.rs  diff.rs  inline.rs  mod.rs  output.rs
rust/src/utils/: mod.rs
(+171 files in other folders)
